criar função para gerar lista de links

--- a/projeto-ada-lovelace/index.html
+++ b/projeto-ada-lovelace/index.html
@@ -68,23 +68,8 @@
       </section>
       <h3>Conheça outras mulheres que fizeram história na tecnologia</h3>
 
-      <nav>
-        <ul>
-          <li>
-            <a href="https://pt.wikipedia.org/wiki/Grace_Hopper"  target="_blank">Grace Hopper</a>
-          </li>
-
-          <li>
-            <a href="https://pt.wikipedia.org/wiki/Dorothy_Vaughan" target="_blank">Dorothy Voughan</a>
-          </li>
-
-          <li>
-            <a href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computa%C3%A7%C3%A3o)" target="_blanck">Margaret Hamilton</a>
-          </li>
-
-          <li>
-            <a href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blacnk">Katherine Johnson</a>
-          </li>
+      <nav >
+        <ul id="listaPersonalidades">
         </ul>
       </nav>
       <h4> Quer saber mais sobre outras mulheres que fizeram história na programação? Deixe seu e-mail!</h4>
